fix(backend): adiciona classes faltantes para compilacao no CI
- WaldorfApplication.java (main)
- SecurityConfig, JwtService, JwtAuthFilter
- Entities: Usuario, Perfil, Aluno, Turma, Contrato, SolicitacaoTitular, Responsavel, Observacao, Epoca
- Enums: Genero, StatusSolicitacao, TipoSolicitacao
- AuthService, LgpdService, ContratoService
- DTOs: LoginRequestDTO, LoginResponseDTO, UsuarioResponseDTO, AlunoRequestDTO, AlunoResponseDTO, ContratoRequestDTO, ContratoResponseDTO
- Repositories: UsuarioRepository, AlunoRepository, TurmaRepository, ResponsavelRepository, SolicitacaoTitularRepository, ContratoRepository
- application.yml principal
- application-test.yml atualizado